# pkg/api/sgroups/domains.pb.go
@@ -1,6 +1,6 @@
 // Code generated by protoc-gen-go. DO NOT EDIT.
 // versions:
-// 	protoc-gen-go v1.36.6
+// 	protoc-gen-go v1.36.9
 // 	protoc        v3.6.1
 // source: sgroups/domains.proto
 
@@ -651,18 +651,20 @@ func (x *Service) GetSgNames() []string {
 // SvcSvcRule: represents Service-to-Service Rule
 type SvcSvcRule struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
+	// name of service
+	Name string `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
 	// service at client
-	SvcFrom string `protobuf:"bytes,1,opt,name=svc_from,json=svcFrom,proto3" json:"svc_from,omitempty"`
+	SvcFrom string `protobuf:"bytes,2,opt,name=svc_from,json=svcFrom,proto3" json:"svc_from,omitempty"`
 	// service at server
-	SvcTo string `protobuf:"bytes,2,opt,name=svc_to,json=svcTo,proto3" json:"svc_to,omitempty"`
+	SvcTo string `protobuf:"bytes,3,opt,name=svc_to,json=svcTo,proto3" json:"svc_to,omitempty"`
 	// action: represents rule action
-	Action RuleAction `protobuf:"varint,3,opt,name=action,proto3,enum=hbf.v2.sgroups.RuleAction" json:"action,omitempty"`
+	Action RuleAction `protobuf:"varint,4,opt,name=action,proto3,enum=hbf.v2.sgroups.RuleAction" json:"action,omitempty"`
 	// priority: rule priority affects on rule pos in its rule list
-	Priority *RulePriority `protobuf:"bytes,4,opt,name=priority,proto3" json:"priority,omitempty"`
+	Priority *RulePriority `protobuf:"bytes,5,opt,name=priority,proto3" json:"priority,omitempty"`
 	// logs: switch-{ON|OFF} logs in rules
-	Logs bool `protobuf:"varint,5,opt,name=logs,proto3" json:"logs,omitempty"`
+	Logs bool `protobuf:"varint,6,opt,name=logs,proto3" json:"logs,omitempty"`
 	// trace: switch-{ON|OFF} trace in rules
-	Trace         bool `protobuf:"varint,6,opt,name=trace,proto3" json:"trace,omitempty"`
+	Trace         bool `protobuf:"varint,7,opt,name=trace,proto3" json:"trace,omitempty"`
 	unknownFields protoimpl.UnknownFields
 	sizeCache     protoimpl.SizeCache
 }
@@ -695,6 +697,13 @@ func (x *SvcSvcRule) ProtoReflect() protoreflect.Message {
 // Deprecated: Use SvcSvcRule.ProtoReflect.Descriptor instead.
 func (*SvcSvcRule) Descriptor() ([]byte, []int) {
 	return file_sgroups_domains_proto_rawDescGZIP(), []int{8}
+}
+
+func (x *SvcSvcRule) GetName() string {
+	if x != nil {
+		return x.Name
+	}
+	return ""
 }
 
 func (x *SvcSvcRule) GetSvcFrom() string {
@@ -1713,16 +1722,17 @@ const file_sgroups_domains_proto_rawDesc = "" +
 	"\x04name\x18\x01 \x01(\tR\x04name\x123\n" +
 	"\x05ports\x18\x02 \x01(\v2\x1d.hbf.v2.sgroups.TransportSpecR\x05ports\x12\x19\n" +
 	"\bsg_names\x18\x03 \x03(\tR\asgNames:\f\x92A\t\n" +
-	"\a\xd2\x01\x04name\"\xef\x01\n" +
+	"\a\xd2\x01\x04name\"\x8a\x02\n" +
 	"\n" +
-	"SvcSvcRule\x12\x19\n" +
-	"\bsvc_from\x18\x01 \x01(\tR\asvcFrom\x12\x15\n" +
-	"\x06svc_to\x18\x02 \x01(\tR\x05svcTo\x122\n" +
-	"\x06action\x18\x03 \x01(\x0e2\x1a.hbf.v2.sgroups.RuleActionR\x06action\x128\n" +
-	"\bpriority\x18\x04 \x01(\v2\x1c.hbf.v2.sgroups.RulePriorityR\bpriority\x12\x12\n" +
-	"\x04logs\x18\x05 \x01(\bR\x04logs\x12\x14\n" +
-	"\x05trace\x18\x06 \x01(\bR\x05trace:\x17\x92A\x14\n" +
-	"\x12\xd2\x01\asvcFrom\xd2\x01\x05svcTo\"\xcd\x02\n" +
+	"SvcSvcRule\x12\x12\n" +
+	"\x04name\x18\x01 \x01(\tR\x04name\x12\x19\n" +
+	"\bsvc_from\x18\x02 \x01(\tR\asvcFrom\x12\x15\n" +
+	"\x06svc_to\x18\x03 \x01(\tR\x05svcTo\x122\n" +
+	"\x06action\x18\x04 \x01(\x0e2\x1a.hbf.v2.sgroups.RuleActionR\x06action\x128\n" +
+	"\bpriority\x18\x05 \x01(\v2\x1c.hbf.v2.sgroups.RulePriorityR\bpriority\x12\x12\n" +
+	"\x04logs\x18\x06 \x01(\bR\x04logs\x12\x14\n" +
+	"\x05trace\x18\a \x01(\bR\x05trace:\x1e\x92A\x1b\n" +
+	"\x19\xd2\x01\x04name\xd2\x01\asvcFrom\xd2\x01\x05svcTo\"\xcd\x02\n" +
 	"\bSgSgRule\x12\x17\n" +
 	"\asg_from\x18\x01 \x01(\tR\x06sgFrom\x12\x13\n" +
 	"\x05sg_to\x18\x02 \x01(\tR\x04sgTo\x12>\n" +
